# daily-cat-wallpaper

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/daily-cat-core/: Cargo.toml
crates/daily-cat-core/src/: config.rs  layout.rs  lib.rs  scheduler.rs  sources.rs  wallpaper.rs
crates/daily-cat-core/tests/: config_tests.rs  scheduler_tests.rs
docs/: architecture.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  wallpaper_backend.rs
