[package]
name = "daily-cat-wallpaper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "daily_cat_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
daily-cat-core = { path = "../crates/daily-cat-core" }
directories.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
