[package]
name = "daily-cat-wallpaper"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "daily_cat_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
daily-cat-core = { path = "../crates/daily-cat-core" }
directories.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
